[gd_scene load_steps=10 format=3 uid="uid://d3h3hkhvoekk5"]

[ext_resource type="Script" path="res://Scripts/turret.gd" id="1_3lr8o"]
[ext_resource type="Texture2D" uid="uid://cg46g73crgrwe" path="res://Sprites/turret base.png" id="2_nimrw"]
[ext_resource type="Texture2D" uid="uid://csvnjbb835v6" path="res://Sprites/turret gun.png" id="3_bqss5"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="4_p7u0d"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="5_4xj8v"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="6_0bpvb"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="7_mrqug"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="8_f2xvv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o87t2"]
radius = 183.678

[node name="Basic_Turret" type="Node2D"]
scale = Vector2(3, 3)
script = ExtResource("1_3lr8o")
targetSwapDelay = 2.0
priorityOverrideHealthThreshold = 0.5
enemyPriorityList = Array[int]([2, 1, 0])

[node name="Sprite2D_Base" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 1
texture = ExtResource("2_nimrw")

[node name="Gun" type="Node2D" parent="."]

[node name="Sprite2D_Gun" type="Sprite2D" parent="Gun"]
texture_filter = 1
texture_repeat = 1
rotation = 1.57079
texture = ExtResource("3_bqss5")
offset = Vector2(0, -3)

[node name="Barrel_End" type="Node2D" parent="Gun"]
position = Vector2(11, -3.05176e-05)

[node name="Detection_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection_Area"]
shape = SubResource("CircleShape2D_o87t2")

[node name="Turret_StateChart" type="Node" parent="."]
script = ExtResource("4_p7u0d")

[node name="Root" type="Node" parent="Turret_StateChart"]
script = ExtResource("5_4xj8v")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="Turret_StateChart/Root"]
script = ExtResource("6_0bpvb")

[node name="To Targeting" type="Node" parent="Turret_StateChart/Root/Idle"]
script = ExtResource("7_mrqug")
to = NodePath("../../Targeting")
event = &"targeting"

[node name="Targeting" type="Node" parent="Turret_StateChart/Root"]
script = ExtResource("6_0bpvb")

[node name="To Idle" type="Node" parent="Turret_StateChart/Root/Targeting"]
script = ExtResource("7_mrqug")
to = NodePath("../../Idle")
event = &"idle"

[node name="StateChartDebugger" parent="." instance=ExtResource("8_f2xvv")]
visible = false
offset_left = 48.3333
offset_top = -55.6667
offset_right = 406.333
offset_bottom = 309.333
scale = Vector2(0.284341, 0.284341)

[node name="Target_Swap_Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Detection_Area" to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="Detection_Area" to="." method="_on_detection_area_area_exited"]
[connection signal="state_entered" from="Turret_StateChart/Root/Targeting" to="." method="_on_targeting_state_entered"]
[connection signal="state_exited" from="Turret_StateChart/Root/Targeting" to="." method="_on_targeting_state_exited"]
[connection signal="state_processing" from="Turret_StateChart/Root/Targeting" to="." method="_on_targeting_state_processing"]
[connection signal="timeout" from="Target_Swap_Timer" to="." method="_on_target_swap_timer_timeout"]
